# CMake-Manager

./: CMakeLists.txt  README.md
include/cman/: Command.hpp  app.hpp
include/cman/commands/: AddCommand.hpp  BuildCommand.hpp  InitCommand.hpp  RunCommand.hpp
src/: app.cpp  main.cpp
src/commands/: AddCommand.cpp  BuildCommand.cpp  InitCommand.cpp  RunCommand.cpp
